# bamf

./: .gitignore  .gitleaks.toml  .golangci.yml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Tiltfile  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  llms.txt  mkdocs.yml
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: with-retry.sh
.github/workflows/: ci.yml  cleanup.yml
alembic/: env.py
alembic/versions/: 181801425e0b_initial_schema.py  698349c0_drop_users_is_sso_only.py  a2b3c4d5_add_revoked_certificates.py  a3f1b2c4_add_kubernetes_groups_to_roles.py  b3e4d5c6_rename_outposts_to_edges.py  b7e2d4f1_add_ssh_host_key_to_ca.py  c4f5a6b7_drop_edge_geoip_coordinates.py  c5d8e3f2_add_recording_type_to_session_recordings.py  d6e9f4a3_add_satellites.py  e7f0a5b4_rename_satellites_to_outposts.py  f1a2b3c4_rename_ca_key_column.py
cmd/bamf/: main.go
cmd/bamf-agent/: main.go
cmd/bamf-bridge/: main.go
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.bridge  Dockerfile.ci  Dockerfile.proxy  Dockerfile.release  Dockerfile.test  Dockerfile.web
docs/: comparison.md  development.md  getting-started.md  index.md  releasing.md
docs/admin/: certificates.md  deployment.md  rbac.md  security-hardening.md  sso.md  users.md
docs/architecture/: authentication.md  edge-deployments.md  outpost-deployments.md  overview.md  satellite-deployments.md  security.md  tunnels.md
docs/guides/: agents.md  databases.md  file-shares.md  kubernetes.md  ssh.md  web-apps.md  web-terminal.md
docs/images/: demo.cast
docs/operations/: backup-restore.md  disaster-recovery.md  monitoring.md  production-checklist.md  runbooks.md  scaling.md  upgrading.md
docs/reference/: agent-config.md  api.md  cli.md  helm-values.md
helm/bamf/: Chart.yaml  values-eval.yaml  values.schema.json  values.yaml
packaging/: agent.yaml  bamf-agent.service  bamf-agent.yaml  postinstall.sh  preinstall.sh  preremove.sh
pentest/pip-audit/: ignore-vulns.txt
pentest/semgrep/: .semgrep.yml
pkg/agent/: agent.go  (+17 more)
proto/: agent.proto  tunnel.proto
scripts/: build.sh  content-hygiene.sh  docs-xref.sh  docs.sh  e2e.sh  eval.sh  helm-config-contract.sh  lib.sh  lint.sh  pentest.sh  preflight.sh  publish.sh  security-scan.sh  test.sh
services/: pyproject.toml
services/bamf/: __init__.py  config.py  logging_config.py  redis_keys.py
services/bamf/api/: __init__.py  agent_commands.py  app.py  bridge_relay.py  dependencies.py  health.py  lifecycle.py  middleware.py  rate_limit.py  tunnel_client.py
services/bamf/api/models/: __init__.py  agents.py  audit.py  auth.py  bridges.py  certificates.py  common.py  connect.py  edges.py  outposts.py  role_assignments.py  roles.py  satellites.py  tokens.py  tunnels.py  users.py
services/bamf/api/proxy/: __init__.py  handler.py  redact.py  rewrite.py  websocket.py
services/bamf/api/routers/: __init__.py  agents.py  audit.py  auth.py  certificates.py  connect.py  edge_tokens.py  edges.py  internal_bridges.py  internal_proxy.py  kube.py  outpost_tokens.py  outposts.py  resources.py  role_assignments.py  roles.py  satellite_tokens.py  satellites.py  terminal.py  tokens.py  tunnels.py  users.py
services/bamf/auth/: __init__.py  auth_state.py  ca.py  claims_mapper.py  passwords.py  recent_users.py  revocation.py  sessions.py  sso.py  tokens.py
services/bamf/auth/connectors/: __init__.py  local.py  oidc.py  saml.py
services/bamf/cli/: bootstrap.py
services/bamf/db/: __init__.py  models.py  session.py
services/bamf/proxy/: __init__.py  api_client.py  app.py  config.py  handler.py  kube.py  pyproject.toml  redact.py  rewrite.py  websocket.py
services/bamf/redis/: client.py
services/bamf/services/: __init__.py  agent_instances.py  audit_service.py  bridge_routing.py  edge_selection.py  geoip.py  rbac_service.py  resource_catalog.py  sso_service.py
services/tests/: __init__.py  conftest.py  test_audit_pruning.py  test_auth.py  test_auth_state.py  test_claims_mapper.py  test_config_channel.py  test_dependency_pins.py  test_edge_selection_integration.py  test_geoip.py  test_health.py  test_rbac.py  test_recent_users.py  test_recordings.py  test_redis_keys.py  test_resource_catalog.py  test_role_assignments.py  test_sessions.py  test_sso.py
services/tests/contracts/: agents_list.json  dial_command.json  resources_list.json  roles_list.json  session_cert.pem  terminal_status.json  tokens_list.json  users_list.json
services/tests/test_api/: test_agent_commands.py  test_agent_instances.py  test_agents_router.py  test_api_audit_middleware.py  test_api_client.py  test_audit_router.py  test_auth_router.py  test_bridge_relay.py  test_bridges_router.py  test_certificates_router.py  test_connect_router.py  test_contract_fixtures.py  test_dependencies.py  test_edge_tokens.py  test_edges.py  test_endpoint_auth.py  test_internal_proxy.py  test_kube_proxy.py  test_outpost_tokens.py  test_outposts.py  test_proxy_app.py  test_proxy_handler_integration.py  test_proxy_helpers.py  test_proxy_streaming.py  test_rate_limit.py  test_redact.py  test_resources_router.py  test_rewrite.py  test_role_assignments_router.py  test_roles_router.py  test_satellite_tokens.py  test_satellites.py  test_terminal.py  test_terminal_handshake.py  test_terminal_helpers.py  test_terminal_router.py  test_tokens_router.py  test_tunnels_router.py  test_users_router.py  test_webhook.py  (+1 more)
services/tests/test_auth/: test_ca.py  test_local_connector.py  test_oidc_connector.py  test_passwords.py  test_revocation.py  test_saml_connector.py
services/tests/test_cli/: __init__.py  test_bootstrap.py
services/tests/test_proxy/: test_handler.py  test_kube.py
services/tests/test_services/: test_bridge_routing.py  test_edge_selection.py
terraform-provider-bamf/: .gitignore  README.md  go.mod  go.sum  main.go
web/: .gitignore  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts
(+199 files in other folders)
