[tool.poetry]
name = "bamf"
version = "0.1.0"
description = "Beyond Access Management Framework - API Server"
authors = ["Matt Robinson"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "bamf"}]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.139.0"
# starlette is a direct dependency with an explicit upper bound on purpose:
# fastapi only floors it (starlette>=0.46, no ceiling), so without this pin it
# floats to the newest release on every build (it has already jumped to 1.x).
# Pinning forces every starlette move to be a deliberate, reviewed edit — see
# tests/test_dependency_pins.py.
starlette = "^1.3.1"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.31.0"
alembic = "^1.14.0"
structlog = "^25.5.0"
httpx = "^0.28.0"
authlib = "^1.6.9"
cryptography = "^48.0.1"
python-multipart = "^0.0.31"
pyyaml = "^6.0.0"
redis = "^5.2.0"
python3-saml = "^1.16.0"
wsproto = "^1.2.0"
zxcvbn = "^4.5.0"
geoip2 = {version = "^4.8.0", optional = true}

[tool.poetry.extras]
geoip = ["geoip2"]

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.22.1"
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.7"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # Depends() in function defaults is idiomatic FastAPI
]

[tool.ruff.lint.per-file-ignores]
# app.py imports routers below shutdown_event = asyncio.Event() to avoid
# circular imports — the module-level statement must come first.
"bamf/api/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["bamf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
